updated license to MIT

--- a/package.json
+++ b/package.json
@@ -84,5 +84,5 @@
   ],
   "author": "Andrew Rapo <andrew@wwlib.org> (https://wwlib.github.io/)",
   "contributors": [],
-  "license": "UNLICENSED"
+  "license": "MIT"
 }
