--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@types/react-dom": "^16.9.8",
     "@types/uuid": "^8.3.0",
     "d3": "^4.12.0",
+    "find-root": "^1.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-spring": "^8.0.27",
