--- a/package.json
+++ b/package.json
@@ -49,17 +49,9 @@
     ]
   },
   "dependencies": {
-    "@craco/craco": "^5.7.0",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.53",
-    "@types/react-dom": "^16.9.8",
-    "@types/uuid": "^8.3.0",
     "d3": "^4.12.0",
     "find-root": "^1.1.0",
+    "jsonfile": "^6.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-spring": "^8.0.27",
@@ -67,6 +59,16 @@
     "web-vitals": "^0.2.4"
   },
   "devDependencies": {
+    "@craco/craco": "^5.7.0",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "@types/jest": "^26.0.15",
+    "@types/jsonfile": "^6.0.1",
+    "@types/node": "^12.0.0",
+    "@types/react": "^16.9.53",
+    "@types/react-dom": "^16.9.8",
+    "@types/uuid": "^8.3.0",
     "electron": "^10.1.5",
     "electron-builder": "^22.9.1",
     "env-cmd": "^10.1.0",
