made electron the default app version

--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "homepage": "./",
   "private": true,
   "scripts": {
-    "start": "env-cmd -f .env.web craco start",
-    "start:electron": "electron .",
-    "build": "craco build",
-    "build:electron": "env-cmd -f .env.electron craco build",
+    "start:web": "env-cmd -f .env.web craco start",
+    "start": "electron .",
+    "build:web": "craco build",
+    "build": "env-cmd -f .env.electron craco build",
     "test": "react-scripts test",
     "test:craco": "craco test",
     "eject": "echo eject:disabled",
